objects/Order.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__LeadSource__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Phone Inquiry</fullName>
                </value>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Purchased List</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LockedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates if an order is locked by a user.</description>
        <inlineHelpText>This indicates if an order is locked by a user.</inlineHelpText>
        <label>Locked By User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LockedFor__c</fullName>
        <description>This stores the reason for doing lock on the order.</description>
        <inlineHelpText>This stores the reason for doing lock on the order.</inlineHelpText>
        <label>Locked For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Async Operation</fullName>
                </value>
                <value>
                    <fullName>Manual Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MasterOrderName__c</fullName>
        <description>The name of a master order under which multi-site orders are managed.</description>
        <label>Master Order Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MaxCatalogueDeltaObjectIndex__c</fullName>
        <description>Maximum Sync Delta Object Index / Name. Populated by order management during order submit in case if catalog is out of sync with OMplus.</description>
        <label>Maximum Catalog Delta Object Index</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MultiServiceMessageData__c</fullName>
        <description>This field stores messages that are generated and displayed in a MultiService feature.</description>
        <label>Multi Service Message Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Notes__c</fullName>
        <description>Captures additional comments about the order.</description>
        <label>Order Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfContractedMonths__c</fullName>
        <label>Number of Contract Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeLoyaltyTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total: One Time Loyalty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeMarginTotal__c</fullName>
        <label>One Time Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of one time totals of orders for which this order is a parent order.</description>
        <label>Parent Order One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <label>Total: One Time Charges</label>
        <summarizedField>OrderItem.vlocity_cmt__OneTimeTotal__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Use the standard OpportunityId field.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationMethod__c</fullName>
        <description>The orchestration method used for Order Management decomposition and orchestration</description>
        <label>Orchestration Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order Management</fullName>
                </value>
                <value>
                    <fullName>Order Management Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationPlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Plan</label>
        <referenceTo>vlocity_cmt__OrchestrationPlan__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationPlanReferenceId__c</fullName>
        <label>Orchestration Plan Reference Id</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Group to which the service point associated with this order is linked</description>
        <label>Order Group</label>
        <referenceTo>vlocity_cmt__OrderGroup__c</referenceTo>
        <relationshipLabel>Group Orders</relationshipLabel>
        <relationshipName>GroupOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderGroup__c</fullName>
        <label>Order Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderMarginTotal__c</fullName>
        <label>Order Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderStatus__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready To Submit</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Cancel Requested</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Amend Requested</fullName>
                </value>
                <value>
                    <fullName>Cancel In Progress</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Frozen</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
                <value>
                    <fullName>Available In Pool</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderTotal__c</fullName>
        <formula>vlocity_cmt__OneTimeTotal__c +  vlocity_cmt__Tax__c  +( vlocity_cmt__RecurringTotal__c *  vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginatingChannel__c</fullName>
        <description>Channel can be used to drive Eligibility/Compatibility/Recommendations/Pricing/Other implementations, e.g. Certain Product Bundles are only available on the Web or Call Center channel but not via the Retail and Dealer channels OR A product may have a different price when sold via the Web than sold via the Retail channel, etc.</description>
        <label>Originating Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                    <default>true</default>
                    <label>Call Center</label>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginatingContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the contact who has initiated the order.</description>
        <label>Originating Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Orders</relationshipLabel>
        <relationshipName>ContactOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginatingContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to the contract from which this order was created</description>
        <label>Originating Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicates if this has parent order. Parent order here also refers to a master order.</description>
        <label>Parent Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
        <relationshipLabel>Orders Using This Price List</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Pricebook__c</fullName>
        <formula>Pricebook2.Name</formula>
        <label>Pricebook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProcessingLog__c</fullName>
        <description>Order processing log. Populated by order management during order submit.</description>
        <label>Processing Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QueuedTs__c</fullName>
        <description>Timestamp when Order Submission is Queued</description>
        <inlineHelpText>Timestamp when Order Submission is Queued</inlineHelpText>
        <label>Queued Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Use the standard QuoteId field.</description>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteToCity__c</fullName>
        <label>Quote To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteToCountry__c</fullName>
        <label>Quote To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteToName__c</fullName>
        <label>Quote To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteToPostalCode__c</fullName>
        <label>Quote To Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteToState__c</fullName>
        <label>Quote To State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteToStreet__c</fullName>
        <label>Quote To Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Reason__c</fullName>
        <description>Customer’s reason for the order. Valid values are dependent on the chosen Order Type value.</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PUK blocked</fullName>
                </value>
                <value>
                    <fullName>Damage SIM</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t fit</fullName>
                </value>
                <value>
                    <fullName>Faulty</fullName>
                </value>
                <value>
                    <fullName>Lost &amp; Stolen</fullName>
                </value>
                <value>
                    <fullName>Malicious calls</fullName>
                </value>
                <value>
                    <fullName>Nuisance calls</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringMarginTotal__c</fullName>
        <label>Recurring Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of recurring time totals of orders for which this order is a parent order.</description>
        <label>Parent Order Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <label>Total: Monthly Charges</label>
        <summarizedField>OrderItem.vlocity_cmt__RecurringTotal__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestDate__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestedCompletionDate__c</fullName>
        <label>Requested Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestedStartDate__c</fullName>
        <description>Request for OM to Start Order, this is also the Requested Date/Time when CPQ will send the Order to Vlocity OM</description>
        <label>Requested Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingName__c</fullName>
        <label>Shipping Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingPostalCode__c</fullName>
        <formula>ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingState__c</fullName>
        <formula>ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatusImageName__c</fullName>
        <formula>TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubmittedToOmDate__c</fullName>
        <description>Date and Time of Successful Submission to Order Management</description>
        <inlineHelpText>Date of Submission to Order Management</inlineHelpText>
        <label>Submitted to OM Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SupersededOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Superseded Order</description>
        <label>Superseded Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Superseding Order</relationshipLabel>
        <relationshipName>SupersededOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SupplementalAction__c</fullName>
        <description>If this is a supplemental order, this field represents the type of action that is requested on the superseded order.</description>
        <label>Supplemental Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Follow On</fullName>
                </value>
                <value>
                    <fullName>Original</fullName>
                    <isActive>false</isActive>
                    <label>Original</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ThorJeopardyStatus__c</fullName>
        <label>Jeopardy Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalMonthlyDiscount__c</fullName>
        <label>Total : Monthly Discount</label>
        <summarizedField>OrderItem.vlocity_cmt__RecurringDiscountPrice__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalOneTimeDiscount__c</fullName>
        <label>Total : One Time Discount</label>
        <summarizedField>OrderItem.vlocity_cmt__OneTimeDiscountPrice__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageMarginTotal__c</fullName>
        <description>Usage Margin Total</description>
        <label>Usage Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationDate__c</fullName>
        <description>Date of last validation run</description>
        <inlineHelpText>Date of last validation run</inlineHelpText>
        <label>Validation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationMessage__c</fullName>
        <description>Message from last validation run</description>
        <inlineHelpText>Message from last validation run</inlineHelpText>
        <label>Validation Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationStatus__c</fullName>
        <description>Status of last validation run</description>
        <inlineHelpText>Status of last validation run</inlineHelpText>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet run</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <recordTypes>
        <fullName>vlocity_cmt__EnterpriseOrder</fullName>
        <active>true</active>
        <description>Use enterprise order for large multi-site or multi-subscriber orders when you want one single large order.</description>
        <label>Enterprise Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__GroupCart</fullName>
        <active>true</active>
        <description>A group cart holds the configured offers designed to be applied to all of the members of the associated group.</description>
        <label>Group Cart</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__InsertionOrder</fullName>
        <active>true</active>
        <description>Use Insertion Order to create the Media Plan, Placement and Deals in the respective Ad/Broadcast management systems.</description>
        <label>Insertion Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__MasterOrder</fullName>
        <active>true</active>
        <description>Use master order for large multi-service point, multi-site or multi-subscriber orders when you need to break the large order into a collection of sub-orders.</description>
        <label>Master Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__MobilePhoneOrder</fullName>
        <active>true</active>
        <label>MobilePhoneOrder</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__StandardOrder</fullName>
        <active>true</active>
        <description>Use a standard order for consumer and small to medium-sized business orders when the number of line items is not large (~200 or less).</description>
        <label>Standard Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__SubOrder</fullName>
        <active>true</active>
        <description>A sub-order is an order that is part of a large master order. Each sub-order is often targeted to a single service point, site or subscriber.</description>
        <label>Sub Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__WorkingCart</fullName>
        <active>true</active>
        <description>A working cart is a temporary cart used by CPQ processes to calculate validity and pricing for a subset of line items from a large order.</description>
        <label>Working Cart</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>